<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:scrollbars="vertical"
        android:text="INFO"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center|center"
        tools:ignore="HardcodedText" />
    <TextView
        android:id="@+id/WelcomeTextHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:scrollbars="vertical"

        android:textSize="16sp"
        android:textStyle="bold"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical">


    </TextView>
    <TextView
        android:id="@+id/WelcomeTextContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:scrollbars="vertical"
        android:text="@string/info_welcome_content"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:justificationMode="inter_word"

        android:padding="5dp" />
        <Space
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_weight="0" />
    <TextView
        android:id="@+id/ProjectTextHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:scrollbars="vertical"

        android:textSize="16sp"
        android:textStyle="bold"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"/>
    <TextView
        android:id="@+id/ProjectTextContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:scrollbars="vertical"
        android:text="@string/info_project_content"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:justificationMode="inter_word"

        android:padding="5dp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_weight="0" />
    <TextView
        android:id="@+id/InstructionsTextHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:scrollbars="vertical"

        android:textSize="16sp"
        android:textStyle="bold"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"/>
        <LinearLayout
            android:id="@+id/InstructionsTextContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="5dp"
            >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:scrollbars="vertical"
        android:text="@string/info_instructions_content"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:justificationMode="inter_word"
/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/calib"
                android:adjustViewBounds="true"
                />
        </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_weight="0" />
    <TextView
        android:id="@+id/PrimaryTextHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:scrollbars="vertical"

        android:textSize="16sp"
        android:textStyle="bold"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:id="@+id/PrimaryTextContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="5dp"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:scrollbars="vertical"
        android:text="@string/info_primary_content"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:justificationMode="inter_word"

        android:padding="5dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/pattern"
            android:adjustViewBounds="true"
            />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_weight="0" />
    <TextView
        android:id="@+id/OptionalTextHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:scrollbars="vertical"

        android:textSize="16sp"
        android:textStyle="bold"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"/>
        <LinearLayout
            android:id="@+id/OptionalTextContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:scrollbars="vertical"
                android:text="@string/info_optional_content"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:justificationMode="inter_word"
            />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/buttons"
                android:adjustViewBounds="true"
                />
        </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_weight="0" />
    <TextView
        android:id="@+id/AboutTextHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:scrollbars="vertical"

        android:textSize="16sp"
        android:textStyle="bold"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"/>
    <TextView
        android:id="@+id/AboutTextContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:scrollbars="vertical"
        android:text="@string/info_about_content"
        android:textSize="14sp"
        android:gravity="center_vertical"

        android:padding="5dp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_weight="0" />
    <TextView
        android:id="@+id/UUIDTextHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:scrollbars="vertical"

        android:textSize="16sp"
        android:textStyle="bold"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/UUIDTextContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:scrollbars="vertical"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:justificationMode="inter_word"

        android:padding="5dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_weight="0" />
</LinearLayout>
</ScrollView>
    <TextView
        android:id="@+id/info_dialog_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:scrollbars="vertical"
        android:text="@string/close_x"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="?attr/selectableItemBackground"
        android:gravity="center|center"

        android:padding="15dp" />
</LinearLayout>